--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Download AutoHotkey and Ahk2Exe
         shell: pwsh
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           $wd = (Get-Item .).FullName
           # Download
